# ros_plugin_example

plugin_base/: CMakeLists.txt  example_plugin.xml  package.xml
plugin_base/include/plugin_base/: base.h  example_plugin.h
plugin_base/src/: example_plugin.cpp
plugin_impl/: CMakeLists.txt  package.xml  plugin_impl.xml
plugin_impl/include/plugin_impl/: plugin_impl.h
plugin_impl/src/: plugin_impl.cpp
plugin_loader/: CMakeLists.txt  package.xml
plugin_loader/src/: main.cpp
